EEC_InitBackup/src/objects/FileMap__c.object
<CustomObject>
    <description>This object contains relation object data for linking s3 file objects with their corresponding parent object.</description>
    <fields>
        <fullName>Object_Id__c</fullName>
        <description>The parent object ID.</description>
        <label>Object Id</label>
        <length>125</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>This is the parent object name.</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_File__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is a link to the S3 file object reference.</description>
        <label>S3 File</label>
        <referenceTo>S3_File__c</referenceTo>
        <relationshipLabel>FileMaps</relationshipLabel>
        <relationshipName>FileMaps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>FileMap</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>FileMap Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FileMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>